rust/crates/ccusage/src/snapshots/ccusage__output__tests__snapshots_summary_json_with_optional_fields_and_model_breakdowns.snap
---
source: crates/ccusage/src/output.rs
expression: summary_json(&row)
---
{
  "cacheCreationTokens": 89,
  "cacheReadTokens": 10,
  "credits": 1.25,
  "date": "2026-01-02",
  "inputTokens": 1234,
  "marketCost": 0.0,
  "modelBreakdowns": [
    {
      "cacheCreationTokens": 50,
      "cacheReadTokens": 10,
      "cost": 0.3,
      "inputTokens": 900,
      "marketCost": 0.0,
      "modelName": "gpt-5.2-codex",
      "outputTokens": 300
    },
    {
      "cacheCreationTokens": 39,
      "cacheReadTokens": 0,
      "cost": 0.12,
      "inputTokens": 334,
      "marketCost": 0.0,
      "modelName": "claude-sonnet-4-20250514",
      "outputTokens": 267
    }
  ],
  "modelsUsed": [
    "gpt-5.2-codex",
    "claude-sonnet-4-20250514"
  ],
  "outputTokens": 567,
  "project": "workspace/api",
  "totalCost": 0.42,
  "totalTokens": 1900
}
