rust/crates/ccusage/src/snapshots/ccusage__output__tests__snapshots_totals_json_with_extra_tokens_credits_and_zero_credit_omission.snap
---
source: crates/ccusage/src/output.rs
expression: "totals_json(&[first, second])"
---
{
  "cacheCreationTokens": 89,
  "cacheReadTokens": 10,
  "credits": 1.25,
  "inputTokens": 1234,
  "marketCost": 0.0,
  "outputTokens": 567,
  "totalCost": 0.42,
  "totalTokens": 1920
}
